PRC-751: prc_foundation - fixed minor left column alignment issues

--- a/docroot/sites/all/themes/prc_foundation/sass/_digital_library.scss
+++ b/docroot/sites/all/themes/prc_foundation/sass/_digital_library.scss
@@ -185,6 +185,9 @@
     }
   }
   .page-node.node-type-digital-library-content {
+    .pane-content-state {
+      padding-left: $desktop-padding;
+    }
     .field-name-field-thumbnail {
       display: block;
     }
